<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalorieTracker"
    android:background="@color/my_blue_back">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTxtView"
        android:gravity="center"
        android:text="@string/calorie_tracker_card"
        android:textSize="32dp"
        android:layout_marginTop="12dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:layout_below="@+id/titleTxtView"
        android:background="@color/my_blue_back">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/consumedCaloriesCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/my_purple_light"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <Button
                    android:id="@+id/datePickerButtonMain"
                    style="?android:spinnerStyle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="November 07 2023"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/calendar_drawable"
                    android:drawablePadding="2dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:indeterminateOnly="false"
                    android:progressDrawable="@drawable/circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
                    app:layout_constraintStart_toStartOf="@+id/progressBar"
                    app:layout_constraintTop_toTopOf="@+id/progressBar"
                    tools:text="1500" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Calories"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
                    app:layout_constraintStart_toStartOf="@+id/progressBar"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProgress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/consumedCaloriesCard"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/breakfastCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/my_purple_light"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_weight="1"
        android:onClick="openLogCaloriesActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/breakfastTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/breakfast_card"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="2"/>

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="51dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="0dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_foreground"
                    app:tint="@color/my_green"/>
            </RelativeLayout>

            <com.example.mealsapp.MyListView
                android:id="@+id/mealPlanListViewBreakfast"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="8dp"
                android:dividerHeight="3dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/lunchCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/my_purple_light"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_weight="1"
        android:onClick="openLogCaloriesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lunchTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/lunch_card"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="51dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="0dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/arrow_foreground"
                app:tint="@color/my_green" />
        </RelativeLayout>

        <com.example.mealsapp.MyListView
            android:id="@+id/mealPlanListViewLunch"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp"
            android:dividerHeight="3dp" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/dinnerCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/my_purple_light"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:onClick="openLogCaloriesActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/dinnerTxtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/dinner_card"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:ellipsize="end"
                        android:maxLines="2"/>

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="51dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="0dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/arrow_foreground"
                        app:tint="@color/my_green"/>
                </RelativeLayout>

                <com.example.mealsapp.MyListView
                    android:id="@+id/mealPlanListViewDinner"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="8dp"
                    android:dividerHeight="3dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/snackCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/my_purple_light"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:onClick="openLogCaloriesActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/snackTxtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/snack_card"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="51dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="0dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/arrow_foreground"
                        app:tint="@color/my_green" />
                </RelativeLayout>

                <com.example.mealsapp.MyListView
                    android:id="@+id/mealPlanListViewSnack"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="8dp"
                    android:dividerHeight="3dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/my_green"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>
