<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/my_blue_back">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTxtView"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:layout_marginTop="12dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:layout_below="@+id/titleTxtView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/graphsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/my_purple_light"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/consumedCalTxtView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/progress_card"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="51dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/arrow_foreground"
                app:tint="@color/my_green" />
        </RelativeLayout>

            <com.jjoe64.graphview.GraphView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:id="@+id/graph" />

            </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_below="@+id/graphsCard"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/mealPlannerCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/my_purple_light"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_weight="1"
        android:onClick="openMealPlannerActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mealPlannerTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/meal_planner_card"
                android:textSize="16sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="2"/>

            <ImageView
                android:layout_width="56dp"
                android:layout_height="51dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@+id/mealPlannerTxtView"
                android:src="@drawable/arrow_foreground"
                app:tint="@color/my_green"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="89dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/lunch_image" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/calorieTrackerCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/graphsCard"
        app:cardBackgroundColor="@color/my_purple_light"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_weight="1"
        android:onClick="openCalorieTrackerActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/calorieTrackerTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/calorie_tracker_card"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="51dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@+id/calorieTrackerTxtView"
                android:src="@drawable/arrow_foreground"
                app:tint="@color/my_green" />
        </RelativeLayout>

        <ImageView
            android:layout_width="89dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/calorie_tracker" />
    </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/otherCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/my_purple_light"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fastingTxtView"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="0dp"
                    android:text="Fasting"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="51dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/arrow_foreground"
                    app:tint="@color/my_green" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="10dp"
                android:text="Track your time fasting! Start the timer and track your time without eating. Stop the timer when you eat food and see your Fasting total Time" />

            <TextView
                android:id="@+id/timerClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/startStopButton"
                    android:text="Start"
                    android:layout_marginRight="8dp"
                    android:backgroundTint="@color/my_green"
                    android:onClick="StartStopTimer"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/resetButton"
                    android:text="Finish"
                    android:layout_marginLeft="8dp"
                    android:backgroundTint="@color/my_red"
                    android:onClick="ResetTimer"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/my_green"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />


</RelativeLayout>
